# VPN-Manager

./: AGENTS.md  Cargo.toml  README.md  app.manifest  app.rc  build.rs
.github/workflows/: rust.yml
src/: config.rs  main.rs  xray_manager.rs
src/ui/: mod.rs  settings_window.rs  tray.rs
src/vpn/: mod.rs
