[package]
name = "Xray-VPN-Manager"
version = "0.2.0"
edition = "2024"

[dependencies]
tray-icon = "0.21"
image = "0.25"
reqwest = { version = "0.12", features = ["blocking"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#v2parser = { path = "../v2-uri-parser" }
v2parser = { git = "https://github.com/house-of-vanity/v2-uri-parser.git" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
zip = "2.2"

[build-dependencies]
embed-resource = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Registry",
] }
